# crawler-buddy

./: Dockerfile  Makefile  Makefile.docker  README.md  commandlineparser.py  configuration.json  cookiemanager.py  crawl.py  crawlcache.py  crawleebeautifulsoup.py  crawleeplaywright.py  crawlerbotasaurusdriver.py  crawlercurlcffi.py  crawlerhttpmorph.py  crawlerpuppeteer.py  crawlerrequests.py  crawlerscrapy.py  crawlerscript.py  crawlerseleniumbase.py  crawlerseleniumfull.py  crawlerseleniumheadless.py  crawlerseleniumundetected.py  crawlerserver.py  crawlerstealth.py  crawlersunnyday.py  docker-compose.yml  docker-entrypoint.sh  entry_rules.json  example_response.json  init_browser_setup.json  init_browser_setup_scripted.json  manual_test.py  manual_test_crawlers.py  page_props.py  pyproject.toml  script_server.py  watchdog.py  yafr.py
data/: google.com.html  google.com.json  www.youtube.com.html  www.youtube.com.json  youtube.com.html  youtube.com.json
images/: crawler_buddy.kra
rsshistory/: configuration.py  crawler.py
rsshistory/webtools/: __init__.py  crawlers.py  handlerchannelodysee.py  handlerchannelyoutube.py  handlerhttppage.py  remoteserver.py  url.py  webconfig.py  webtools.py
src/: __init__.py  configuration.py  crawler.py  crawlercontainer.py  crawlercontaineralchemy.py  crawlerdata.py  crawlerhistory.py  crawlerinfo.py  crawlerqueue.py  crawlhistory.py  entryrules.py  server_init.py  server_views.py  taskrunner.py  views.py  viewutils.py
src/webtools/: __init__.py  cookiemanager.py  crawlers.py  crawlerscript.py  defaulturlhandler.py  feedreader.py  handlerchannelodysee.py  handlerchannelyoutube.py  handlerhttppage.py  handlerinterface.py  handlers.py  handlervideoyoutube.py  pages.py  remoteserver.py  requestbuilder.py  scriptcrawlerparser.py  url.py  urllocation.py  webconfig.py  webtools.py
static/: css.css
tests/: fakeinternet.py  test_alchemysearch.py  test_configuration.py  test_crawler.py  test_crawlercontainer.py  test_crawlerhistory.py  test_crawlerhistory2.py  test_crawlerinfo.py  test_crawlerqueue.py  test_crawlers.py  test_entryrules.py  test_feedclient.py  test_ipc.py  test_script_server.py  test_scriptserver.py  test_urlpropertyvalidator.py  test_utils_crawlerhistory.py  test_utils_sqlmodel.py  test_views.py  test_views_info.py  test_webtools_contentinterface.py  test_webtools_contentlinkparser.py  test_webtools_crawlerinterface.py  test_webtools_crawlers.py  test_webtools_domaincache.py  test_webtools_feedreader.py  test_webtools_handlerhttp.py  test_webtools_handlerodysee.py  test_webtools_handlers.py  test_webtools_handleryoutube.py  test_webtools_htmlpage.py  test_webtools_opmlpage.py  test_webtools_pageresponse.py  test_webtools_remoteserver.py  test_webtools_rsspage.py  test_webtools_scriptcrawler.py  test_webtools_url.py  test_webtools_urlagemoderator.py  test_webtools_urllocation.py  test_webtools_webconfig.py  (+1 more)
tests/performance/: test_webtools_url.py
tests/real/: test_real.py  test_youtube.py
tests/unit/: fakeinternet.py  test_configuration.py  test_crawler.py  test_crawlercontainer.py  test_crawlercontaineralchemy.py  test_entryrules.py  test_script_server.py  test_views.py  test_webtools_handlers.py  test_webtools_handleryoutube.py  test_webtools_scriptcrawler.py  test_webtools_url.py  test_webtools_webconfig.py
utils/: __init__.py  alchemysearch.py  crawlhistory.py  logger.py  reflected.py  systemmonitoring.py
utils/controllers/: controllers.py  (+1 more)
viewspkg/: info.py
(+31 files in other folders)
