[tool.poetry]
name = "linklibrary"
version = "0.10.4"
description = "Link Archive"
authors = ["Iwan Grozny <renegat@renegat0x0.ddns.net>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
feedparser = "^6.0.10"
python-dateutil = "^2.8.2"
yt-dlp = "^2024.12.6"
waybackpy = "^3.0.6"
sqlalchemy = "^2.0.34"
tldextract = "^5.1.2"
beautifulsoup4 = "^4.12.3"
sympy = "^1.13.2"
spacy = "3.7.5"
lxml = "5.3.0"
# [optional] - at least one of methods need to be running
# example: crawlerrequests.py
requests = "^2.32.3"

#  use things below if you want to use selenium
selenium="*"

chardet = "^5.2.0"
psycopg2 = "*"
pyvirtualdisplay = "^3.0"

# use things below if you want undetected chrome driver
undetected-chromedriver = "^3.5.5"

#  use things below if you want to use crawlee
crawlee="0.1.1"
playwright="*"

flask="*"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
