# if poetry update takes forever
# export PYTHON_KEYRING_BACKEND=keyring.backends.fail.Keyring

[tool.poetry]
name = "crawler-buddy"
version = "6.0.53"
description = "Internet Crawler"
authors = ["Iwan Grozny <renegat@renegat0x0.ddns.net>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dateutil = "^2.8.2"
yt-dlp = "^2025.10.22"
beautifulsoup4 = "^4.13.5"
lxml = "^5.3.0"
brutefeedparser="^0.10.5"
pytz = "^2024.2"
psutil="*"
flask="*"
url-cleaner="*"
webtoolkit="^0.0.141"

# Enable and crawlers as needed

# [Requests]
requests = "^2.32.5"

# [Selenium]
selenium="4.38.0"
selenium-wire="*"
# chardet = "^5.2.0" # does not work with some RSS sources
# psycopg2 = "*"
pyvirtualdisplay = "^3.0"
undetected-chromedriver = "^3.5.5"

# [Crawlee]
crawlee="1.0.4"
playwright="1.55.0"

# [Stealth requests]
stealth-requests = "^2.0.4"

# [Httpx]
httpx = "0.28.1"

# httpmorph="0.2.5"

# [botasaurus]
# botasaurus = "*"
#
# [scrapy]
scrapy = "2.13.3"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
